--- a/public/index.html
+++ b/public/index.html
@@ -150,12 +150,12 @@ html{
 
 
 	
-	<div id="meat">	
+<!-- 	<div id="meat">	
 			<p>The Countdown Countinues...</p>
 			<div id="countbox1"></div>
 			<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
 	</div>
-	<img src="/images/dock.png" ></img>
+	<img src="/images/dock.png" ></img> -->
 </body>
 
 </html>
