--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@ top:0;
 
 p {
 	font-family:arial, sans-serif;
-	font-size:1em;
+	font-size:1.3em;
 	color:white;
 	font-weight:bold;
 	text-align:center;
@@ -150,11 +150,11 @@ html{
 
 
 	
-	<!-- <div id="meat">	
-				<p>The Countdown Countinues...</p>
-				<div id="countbox1"></div>
-				<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
-		</div> -->
+	<div id="meat">	
+					<p>The Countdown Countinues...</p>
+					<div id="countbox1"></div>
+					<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
+			</div>
 	<img src="/images/dock.png" ></img>
 </body>
 
