--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,10 @@ html{
 	background-color:<img src="/images/dock.png" ></img>;
 	
 }
+
+body{
+	background-color:#9cffcf;
+}
 </style>
 
 </head>
