correct bkgrnd color

--- a/public/index.html
+++ b/public/index.html
@@ -138,13 +138,10 @@ text-align:center;
 	width:95%;
 }
 
-html{
-	background-color:<img src="/images/dock.png" ></img>;
-	
-}
 
-body{
-	background-color:#9cffcf;
+html{
+	
+	background-color:#d1dfff;
 }
 </style>
 
@@ -160,6 +157,7 @@ body{
 					<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
 			</div>
 	<img src="/images/dock.png" ></img>
+	
 </body>
 
 </html>
