--- a/public/index.html
+++ b/public/index.html
@@ -106,8 +106,8 @@ $( document ).ready( function() {
 img {
 max-width: 100%; 
 max-height: 100%;
-width: auto;
-height: auto; 
+width: 100%;
+height: 100%; 
 position:absolute;
 top:0;
 }
