--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@ top:0;
 
 p {
 	font-family:arial, sans-serif;
-	font-size:1.3em;
+	font-size:5%;
 	color:white;
 	font-weight:bold;
 	text-align:center;
