--- a/public/index.html
+++ b/public/index.html
@@ -106,8 +106,8 @@ $( document ).ready( function() {
 img {
 max-width: 100%; 
 max-height: 100%;
-width: 150%;
-height: 100%; 
+width: auto%;
+height: auto%; 
 position:absolute;
 top:0;
 }
@@ -115,14 +115,14 @@ top:0;
 
 p {
 	font-family:arial, sans-serif;
-	font-size:50%;
+	font-size:1.2em;
 	color:white;
 	font-weight:bold;
 	text-align:center;
 }
 
 #countbox1{
-font:1em Arial;
+font:.6em Arial;
 color:white;
 font-weight:bold;
 text-align:center;
