--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@ $( document ).ready( function() {
             setBodyScale();
         });
 
+
 </script>
 
 <style type="text/css" >
@@ -157,7 +158,10 @@ html{
 					<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
 			</div>
 	<img src="/images/dock.png" ></img>
-	
+	<embed src="/images/danza.mp3" autostart="true">Danza Kuduro Don Omar</embed>
+	<noembed>
+		<bgsound src="/images/danza.mp3">
+	</noembed>
 </body>
 
 </html>
