--- a/public/index.html
+++ b/public/index.html
@@ -158,10 +158,8 @@ html{
 					<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
 			</div>
 	<img src="/images/dock.png" ></img>
-	<embed src="/images/danza.mp3" autostart="true">Danza Kuduro Don Omar</embed>
-	<noembed>
-		<bgsound src="/images/danza.mp3">
-	</noembed>
+	<embed src="/images/danza.mp3" autostart="true" hidden="true"></embed>
+	
 </body>
 
 </html>
