--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,8 @@ $( document ).ready( function() {
 img {
 max-width: 100%; 
 max-height: 100%;
-width: auto%;
-height: auto%; 
+width: auto;
+height: 100%; 
 position:absolute;
 top:0;
 }
