--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@ top:0;
 
 p {
 	font-family:arial, sans-serif;
-	font-size:1.2em;
+	font-size:1.2em Arial;
 	color:white;
 	font-weight:bold;
 	text-align:center;
