--- a/public/index.html
+++ b/public/index.html
@@ -116,14 +116,14 @@ top:0;
 
 p {
 	font-family:arial, sans-serif;
-	font-size:1.9em Arial;
+	font-size:3em Arial;
 	color:white;
 	font-weight:bold;
 	text-align:center;
 }
 
 #countbox1{
-font:.8em Arial;
+font:1em Arial;
 color:white;
 font-weight:bold;
 text-align:center;
