--- a/public/index.html
+++ b/public/index.html
@@ -114,16 +114,17 @@ top:0;
 }
 
 
-p {
+body {
 	font-family:arial, sans-serif;
-	font-size:50% Arial;
+	font-size:12px;
 	color:white;
 	font-weight:bold;
 	text-align:center;
 }
 
 #countbox1{
-font:100% Arial;
+font-family:arial, sans-serif;
+
 color:white;
 font-weight:bold;
 text-align:center;
