--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@ top:0;
 
 body {
 	font-family:arial, sans-serif;
-	font-size:12px;
+	font-size:72px;
 	color:white;
 	font-weight:bold;
 	text-align:center;
@@ -124,14 +124,13 @@ body {
 
 #countbox1{
 font-family:arial, sans-serif;
-
 color:white;
 font-weight:bold;
 text-align:center;
 }
 
 #meat{
-	
+	font-size:2em;
 	margin:6% auto;
 	position:relative;
 	width:50%;
