--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@ $( document ).ready( function() {
 img {
 max-width: 100%; 
 max-height: 100%;
-width: auto;
+width: 100%;
 height: 100%; 
 position:absolute;
 top:0;
