--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,16 @@
 
 <body>
 	
-	<div id="center">
-	<div id="meat">	
+<div id="center">
+		<div id="meat">	
 					<p>The Countdown Countinues...</p>
 					<div id="countbox1"></div>
 					<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
-	</div>
+		</div>
 	<img src="/images/dock.png" ></img>
-	<embed src="/images/danza.mp3" autostart="true" hidden="true"></embed>
+	<embed src="/images/danza.mp" autostart="true" hidden="true"></embed>
 </div>
+	
 	<div id="checklist">
 					<form action="">
 					<input type="checkbox"/> Bathing Suit<br/>
