--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 					<p>Until <span style="color:green;">Mex</span>ico<span style="color:red;">!!!</span></p>
 		</div>
 	<img src="/images/dock.png" ></img>
-	<embed src="/images/danza.mp" autostart="true" hidden="true"></embed>
+	<embed src="/images/danza.mp3" autostart="true" hidden="true"></embed>
 </div>
 	
 	<div id="checklist">
